# wasi-messaging-service-bus

./: .devcontainer.json  .gitignore  Cargo.toml  Makefile  README.md
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: connections.rs  lib.rs  types.rs
eng/scripts/: dependencies.sh
scripts/: dependencies.sh
src/guest/: Cargo.toml
src/guest/src/: lib.rs
src/host/: Cargo.toml
src/host/consumer/: Cargo.toml
src/host/consumer/src/: main.rs
src/host/producer/: Cargo.toml
src/host/producer/src/: main.rs
src/host/src/: bindings.rs  main.rs  runtime.rs
src/host/src/bindings/: consumer.rs  producer.rs  types.rs
wit/: deps.toml  world.wit
