[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
azure_core = "0.19.0"
azure_messaging_servicebus = "0.19.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
wasmtime = "19.0.0"
wasmtime-wasi = "19.0.0"
wit-component = "0.202.0"
